Fixed problem with #tweet-box preventing interactivity on small screens

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -112,15 +112,15 @@ button {
     margin-left: 10px;
 }
 
-/*.main-head {*/
-    /*font-family: 'Raleway', sans-serif;*/
-	/*font-weight: 400;*/
-    /*font-size: 2rem;*/
-    /*text-transform: uppercase;*/
-    /*text-align: center;*/
-    /*letter-spacing: 1.5px;*/
-    /*margin-bottom: 15px;*/
-/*}*/
+.main-head {
+    font-family: 'Raleway', sans-serif;
+	font-weight: 400;
+    font-size: 2rem;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 1.5px;
+    margin-bottom: 15px;
+}
 
 
 /*#key-findings.box {*/
@@ -267,6 +267,12 @@ g .x.axis text {
 footer {
     padding: 20px 0 20px 0;
 }
+
+/* fix for #tweet-box overlapping other elements and preventing functionality on small screens*/
+#tweet-box {
+    position: unset;
+}
+
 
 
 /* ----------- MEDIA QUERIES ------------------------ */
